Fixed iframe z-index issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,7 +11,8 @@ body, .navbar
 {
   position: fixed;
   width: 100%;
-  top:1
+  top:1;
+  z-index:1000;
 }
 
 .row
@@ -50,7 +51,7 @@ p
 
 iframe
 {
-  position: relative;
+  position: absolute;
   z-index: 0;
 }
 
